syntax = "proto3";

package api.v1;

import "api/v1/meta.proto";

service TenantMemberService {
  rpc Create(TenantMemberCreateRequest) returns (TenantMemberResponse);
  rpc Update(TenantMemberUpdateRequest) returns (TenantMemberResponse);
  rpc Delete(TenantMemberDeleteRequest) returns (TenantMemberResponse);
  rpc Get(TenantMemberGetRequest) returns (TenantMemberResponse);
  rpc Find(TenantMemberFindRequest) returns (TenantMemberListResponse);
}

// TenantMember is the database model
message TenantMember {
  Meta meta = 1;
  // TenantId is the id of the parent tenant
  string tenant_id = 2;
  // MemberId is the id of the member tenant
  string member_id = 3;
}

message TenantMemberCreateRequest {
  TenantMember tenant_member = 1;
}

message TenantMemberUpdateRequest {
  TenantMember tenant_member = 1;
}

message TenantMemberDeleteRequest {
  string id = 1;
}

message TenantMemberGetRequest {
  string id = 1;
}

message TenantMemberFindRequest {
  optional string tenant_id = 1;
  optional string member_id = 2;
  map<string, string> annotations = 6;
}

message TenantMemberResponse {
  TenantMember tenant_member = 1;
}

message TenantMemberListResponse {
  repeated TenantMember tenant_members = 1;
}
